# Personalized-Holiday-Management-Agent

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt  setup.py  template.py
Personalized_Holiday_Management/: __init__.py
Personalized_Holiday_Management/agents/: __init__.py  planner.py  researcher.py
Personalized_Holiday_Management/config/: __init__.py  settings.py
Personalized_Holiday_Management/models/: __init__.py  gpt_model.py  ollama_model.py
Personalized_Holiday_Management/teams/: holiday_team.py
Personalized_Holiday_Management/utils/: utils.py
static/: style.css
templates/: index.html
