[project]
name = "personalized-holiday-management-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "autogen-agentchat==0.5.7",
    "autogen-core>=0.5.7",
    "autogen-ext[ollama,openai]>=0.5.7",
    "dotenv>=0.9.9",
    "pydantic>=2.13.3",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
]
